--- a/src/app/connected-account/connected-account.component.html
+++ b/src/app/connected-account/connected-account.component.html
@@ -1,22 +1,37 @@
 
-<div>
-  <mat-list role="list">
 
-    <mat-list-item role="listitem" style="margin-bottom:40px;" *ngFor="let customerDetails of customerObjectFromFirebase">
-      <mat-card style="background-color: whitesmoke;width: 100%;padding: 10px;">
-        <div fxLayout="row" fxLayoutAlign="space-between center">
-          <div fxLayout="row">
-            <img src={{customerDetails.payload.doc.data().customerImgFile}} style="border-radius: 50%;width: 50px;height: 50px;">
-            <div fxLayout="column" fxLayoutAlign="space-around start" style="margin-left: 10px;">
-              <div>{{customerDetails.payload.doc.data().name}}</div>
-              <div style="font-weight: 100;font-size: small;">{{"Added By "+customerDetails.payload.doc.data().adminName}}</div>
+
+<div *ngIf="onlineValue === true">
+
+  <div>
+    <mat-list role="list">
+
+      <mat-list-item role="listitem" style="margin-bottom:40px;" *ngFor="let customerDetails of customerObjectFromFirebase">
+        <mat-card style="background-color: whitesmoke;width: 100%;padding: 10px;">
+          <div fxLayout="row" fxLayoutAlign="space-between center">
+            <div fxLayout="row">
+              <img src={{customerDetails.payload.doc.data().customerImgFile}} style="border-radius: 50%;width: 50px;height: 50px;">
+              <div fxLayout="column" fxLayoutAlign="space-around start" style="margin-left: 10px;">
+                <div>{{customerDetails.payload.doc.data().name}}</div>
+                <div style="font-weight: 100;font-size: small;">{{"Added By "+customerDetails.payload.doc.data().adminName}}</div>
+              </div>
             </div>
+            <button mat-raised-button color="warn">{{buttonStatusValue === "Activated"? "Connected":"Activate"}}</button>
           </div>
-          <button mat-raised-button color="warn">{{buttonStatusValue === "Activated"? "Connected":"Activate"}}</button>
-        </div>
-      </mat-card>
-    </mat-list-item>
+        </mat-card>
+      </mat-list-item>
 
 
-  </mat-list>
+    </mat-list>
+  </div>
+
+</div>
+
+
+<div *ngIf="onlineValue === false" fxLayout="column" fxLayoutAlign="center center">
+
+  <img src="assets/no_connection.png"/>
+
+  <h3>Please Connect To Internet</h3>
+
 </div>
