--- a/src/app/connected-account/connected-account.component.html
+++ b/src/app/connected-account/connected-account.component.html
@@ -3,8 +3,8 @@
 
 <div *ngIf="onlineValue === true">
 
+  <div *ngIf="noDataStatus === false">
 
-  <div *ngIf="noDataStatus === true">
     <mat-list role="list">
 
       <mat-list-item role="listitem" style="margin-bottom:40px;" *ngFor="let customerDetails of customerObjectFromFirebase">
@@ -22,8 +22,8 @@
         </mat-card>
       </mat-list-item>
 
-
     </mat-list>
+
   </div>
 
   <div *ngIf="noDataStatus === true" fxLayout="column" fxLayoutAlign="center center">
